Changed icon and added splash activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="popular">Popular</string>
     <string name="pushpa">Pushpa</string>
     <string name="this_is_a_test_movie_name_of_two_lines">This is a test movie name of two lines</string>
+    <string name="developed_by_manish">Developed by Manish</string>
 </resources>
